Add bartoc-search service (#47)

--- a/configs/bartoc-search/config.json
+++ b/configs/bartoc-search/config.json
@@ -1,4 +1,21 @@
 {
+  "queues": {
+    "terminologiesQueue": {
+      "concurrency": 20,
+      "batchSize": 50,
+      "limiter" : {
+        "max": 100,
+        "duration": 1000
+      }
+    }
+  },
+  "redis": {
+    "host": "redis",
+    "pingTimeout": 10000,
+    "pingRetries": 5,
+    "pingRetryDelay": 1000,
+    "port": 6379
+  },
   "solr": {
     "batchSize": 500,
     "coreName": "terminologies",
@@ -8,5 +25,14 @@
     "pingRetryDelay": 1000,
     "port": 8983,
     "version": 8.1
+  },
+  "webSocket": {
+    "host": "wss://bartoc.org/api",
+    "port": 443,
+    "path": "/voc/changes",
+    "pingTimeout": 10000,
+    "pingRetries": 5,
+    "pingRetryDelay": 1000
   }
 }
+
