--- a/services/bartoc-search/docker-compose.yml
+++ b/services/bartoc-search/docker-compose.yml
@@ -2,25 +2,31 @@ services:
   bartoc-search:
     image: ghcr.io/gbv/bartoc-search:main
     container_name: bartoc-search
+    command: ["npm", "run", "start:prod"]
     networks:
       - nginx
       - solr
-    ports:
-      - "3883:3883"     # HTTP
-      - "24678:24678"
+      - redis
     volumes:
       - $CONFIGS/bartoc-search:/config:ro
+      - bartoc-search-data:/usr/src/app/data
     environment:
-      - __VITE_ADDITIONAL_SERVER_ALLOWED_HOSTS=coli-conc.gbv.de-66498cbd0fd9d56a52c62df973b552d419bce1a9
+      - VIRTUAL_PATH=/vocabularies-next/
+      - __VITE_ADDITIONAL_SERVER_ALLOWED_HOSTS=.bartoc.org
       - CONFIG_FILE=/config/config.json
-      - NODE_ENV=development
+      - NODE_ENV=production
       - DATA_DIR=/usr/src/app/data
-      - BARTOC_NDJSON_URL=https://bartoc.org/data/dumps/latest.ndjson
-      - VIRTUAL_HOST=coli-conc.gbv.de
-      - VIRTUAL_PORT=3883
-      - VIRTUAL_PATH=/bartoc-search/
-      - VIRTUAL_DEST=/
+      - BARTOC_DUMP=https://bartoc.org/data/dumps/latest.ndjson
+      - REINDEX=1
+      - |
+        VIRTUAL_HOST_MULTIPORTS=
+          bartoc.org:
+            "/vocabularies-next/":
+              port: 3883
+              dest: "/"
     restart: unless-stopped
+  volumes:
+    bartoc-search-data:
 
 networks:
   nginx:
@@ -29,3 +35,6 @@ networks:
   solr:
     external: true
     name: solr
+  redis:
+    external: true
+    name: redis
